feat: Scalable Compactor (#2466)
* storage: Refactor block compaction to allow shard-splitting

* Rename to CompactWithSplitting for consistency

* Introduce back compaction series testing.

* Add sharding compaction level

* Add some tests for CompactWithSplitting

* Fix symbols split-compaction (#2371)

* Fixes a race that was actually surfacing another real issue.

* Add a tests for meta min/max time

* Fixes meta min/max after split

* Add mimir compactor code

* Fixing more code

* Introduce a meta fetcher that synchronize filtered metadata of all block locally

* Fixes all tests

* make go/mod

* Adds a tenant scanner

* Working on the blocks cleaner

* Adds bucketindex package

* Fixing and adapting more code

* Add missing minCompactor config

* Fixes as much as possible

* block: Adds Download and MarkForNoCompact

* improve documentation

* wip

* Adds a way to validate local blocks

* fixes wrong merge

* more integration fixes

* fixes metrics namespace

* more fixes

* fixes block_cleaner_test

* remove upload block api

* Fixes split_merge_compactor tests

* Fixes split_merge_compactor tests

* Fixes more tests

* fixing more tests

* Fixes more tests

* Add limits for the compactor

* Removes unused limits and code

* Switches to Compactor interface for mocking

* Fixes blocks_cleaner_test.go

* Removes tombstones removal

* Fixes the compactor shard label not being saved

* Fixes most compactor tests.

* Implement e2e tests

* lint

* Fixes a race detected when generating ULID

* Add the compactor compenent

* Add the compactor helm component

* Fixes tests after the range change

* change: store-gateway uses the bucketindex

Changes the store-gateway to use the bucketindex instead of iterating
through all blocks.
This also tweak block query config.

* Fixes helm to not use a disk

* Use stable time format for logs

* Fixes time format issue

*

--- a/operations/pyroscope/helm/pyroscope/values-micro-services.yaml
+++ b/operations/pyroscope/helm/pyroscope/values-micro-services.yaml
@@ -50,6 +50,17 @@ pyroscope:
         requests:
           memory: 8Gi
           cpu: 1
+    compactor:
+      kind: StatefulSet
+      replicaCount: 3
+      persistence:
+        enabled: false
+      resources:
+        limits:
+          memory: 16Gi
+        requests:
+          memory: 8Gi
+          cpu: 1
     store-gateway:
       kind: StatefulSet
       replicaCount: 3
