--- a/operations/pyroscope/helm/pyroscope/templates/deployments-statefulsets.yaml
+++ b/operations/pyroscope/helm/pyroscope/templates/deployments-statefulsets.yaml
@@ -103,6 +103,10 @@ spec:
               mountPath: /etc/pyroscope/overrides/
             - name: data
               mountPath: /data
+            {{- if eq $component "compactor" }}
+            - name: data-compactor
+              mountPath: /data-compactor
+            {{- end }}
             {{- with $values.extraVolumeMounts }}
             {{- toYaml . | nindent 12 }}
             {{- end }}
@@ -133,6 +137,10 @@ spec:
         - name: overrides-config
           configMap:
             name: {{ include "pyroscope.fullname" . }}-overrides-config
+  {{- if eq $component "compactor" }}
+        - name: data-compactor
+          emptyDir: {}
+  {{- end }}
   {{- $persistence := $values.persistence }}
   {{- if not $persistence.enabled }}
         - name: data
