--- a/ebpf/Makefile
+++ b/ebpf/Makefile
@@ -2,7 +2,8 @@
 .phony: python/dwarfdump
 python/dwarfdump:
 	git submodule update --init --recursive
-	go run cmd/python_dwarfdump/main.go $(shell find testdata -name libpy\*.so\*) > python/versions_gen.go
+	go run cmd/python_dwarfdump/main.go $(shell find testdata -name libpy\*.so\*) \
+	 	$(shell find .  | grep python/ | grep -E "/python3\\.[0-9]+") > python/versions_gen.go
 	go fmt python/versions_gen.go
 
 
