--- a/operations/pyroscope/helm/pyroscope/rendered/single-binary.yaml
+++ b/operations/pyroscope/helm/pyroscope/rendered/single-binary.yaml
@@ -1312,6 +1312,7 @@ spec:
             httpGet:
               path: /ready
               port: http2
+              scheme: http
           volumeMounts:
             - name: config
               mountPath: /etc/pyroscope/config.yaml
