Fix service scheme

--- a/operations/pyroscope/helm/pyroscope/rendered/micro-services.yaml
+++ b/operations/pyroscope/helm/pyroscope/rendered/micro-services.yaml
@@ -2076,7 +2076,7 @@ spec:
             httpGet:
               path: /ready
               port: http2
-              scheme: http
+              scheme: HTTP
           volumeMounts:
             - name: config
               mountPath: /etc/pyroscope/config.yaml
@@ -2169,7 +2169,7 @@ spec:
             httpGet:
               path: /ready
               port: http2
-              scheme: http
+              scheme: HTTP
           volumeMounts:
             - name: config
               mountPath: /etc/pyroscope/config.yaml
@@ -2262,7 +2262,7 @@ spec:
             httpGet:
               path: /ready
               port: http2
-              scheme: http
+              scheme: HTTP
           volumeMounts:
             - name: config
               mountPath: /etc/pyroscope/config.yaml
@@ -2355,7 +2355,7 @@ spec:
             httpGet:
               path: /ready
               port: http2
-              scheme: http
+              scheme: HTTP
           volumeMounts:
             - name: config
               mountPath: /etc/pyroscope/config.yaml
@@ -2627,7 +2627,7 @@ spec:
             httpGet:
               path: /ready
               port: http2
-              scheme: http
+              scheme: HTTP
           volumeMounts:
             - name: config
               mountPath: /etc/pyroscope/config.yaml
@@ -2726,7 +2726,7 @@ spec:
             httpGet:
               path: /ready
               port: http2
-              scheme: http
+              scheme: HTTP
           volumeMounts:
             - name: config
               mountPath: /etc/pyroscope/config.yaml
@@ -2822,7 +2822,7 @@ spec:
             httpGet:
               path: /ready
               port: http2
-              scheme: http
+              scheme: HTTP
           volumeMounts:
             - name: config
               mountPath: /etc/pyroscope/config.yaml
