--- a/operations/pyroscope/helm/pyroscope/rendered/single-binary.yaml
+++ b/operations/pyroscope/helm/pyroscope/rendered/single-binary.yaml
@@ -1312,7 +1312,7 @@ spec:
             httpGet:
               path: /ready
               port: http2
-              scheme: http
+              scheme: HTTP
           volumeMounts:
             - name: config
               mountPath: /etc/pyroscope/config.yaml
