--- a/examples/tracing/tempo/docker-compose.yml
+++ b/examples/tracing/tempo/docker-compose.yml
@@ -38,12 +38,13 @@ services:
       dockerfile: Dockerfile.load-generator
 
   grafana:
-    image: grafana/grafana:10.1.1
+    image: grafana/grafana-dev:10.3.0-144189
     environment:
       - GF_AUTH_ANONYMOUS_ENABLED=true
       - GF_AUTH_ANONYMOUS_ORG_ROLE=Admin
       - GF_AUTH_DISABLE_LOGIN_FORM=true
       - GF_INSTALL_PLUGINS=pyroscope-panel
+      - GF_FEATURE_TOGGLES_ENABLE=traceToProfiles
     volumes:
       - ./grafana/provisioning/datasources:/etc/grafana/provisioning/datasources
     ports:
