Helm: Fix persistence for compactor's data path
This will use a subvolume of volume `data` for the compactor instead of a sepearte volume. This will ensure we are able to handle persistence options in the same way for the compactor.

--- a/operations/pyroscope/helm/pyroscope/rendered/micro-services.yaml
+++ b/operations/pyroscope/helm/pyroscope/rendered/micro-services.yaml
@@ -2636,8 +2636,10 @@ spec:
               mountPath: /etc/pyroscope/overrides/
             - name: data
               mountPath: /data
-            - name: data-compactor
+              subPath: default
+            - name: data
               mountPath: /data-compactor
+              subPath: compactor
           resources:
             limits:
               memory: 16Gi
