Helm: Fix persistence for compactor's data path (#2635)
This will use a subvolume of volume `data` for the compactor instead of a sepearte volume. This will ensure we are able to handle persistence options in the same way for the compactor.

--- a/operations/pyroscope/helm/pyroscope/templates/deployments-statefulsets.yaml
+++ b/operations/pyroscope/helm/pyroscope/templates/deployments-statefulsets.yaml
@@ -104,8 +104,10 @@ spec:
             - name: data
               mountPath: /data
             {{- if eq $component "compactor" }}
-            - name: data-compactor
+              subPath: default
+            - name: data
               mountPath: /data-compactor
+              subPath: compactor
             {{- end }}
             {{- with $values.extraVolumeMounts }}
             {{- toYaml . | nindent 12 }}
