--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
     "format:fix": "prettier --write .",
     "storybook": "start-storybook -p 6006",
     "build-storybook": "build-storybook",
-    "prepare": "husky install"
+    "prepare:manually": "husky install"
   },
   "lint-staged": {
     "*.{ts,tsx,scss}": "yarn format:fix"
