actually add ruby

--- a/examples/golang-push/rideshare/docker-compose.yml
+++ b/examples/golang-push/rideshare/docker-compose.yml
@@ -35,6 +35,28 @@ services:
     ports:
       - '4040:4040'
 
+  us-east-ruby:
+    platform: linux/amd64
+    environment:
+      - REGION=us-east
+    build:
+      context: ./rideshare-mem
+
+  eu-north-ruby:
+    platform: linux/amd64
+    environment:
+      - REGION=eu-north
+    build:
+      context: ./rideshare-mem
+
+  ap-south-ruby:
+    platform: linux/amd64
+    environment:
+      - REGION=ap-south
+    build:
+      context: ./rideshare-mem
+
+
   load-generator:
     build:
       context: .
