--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -47,8 +47,10 @@ jobs:
         uses: actions/setup-go@v4
         with:
           go-version: 1.21.3
+      - name: Install qemu
+        run: sudo apt-get -y install qemu-system-x86
       - name: Test
-        run: sudo make go/test_ebpf
+        run: make go/test_ebpf
   lint:
     runs-on: ubuntu-latest
     steps:
