--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -47,10 +47,11 @@ jobs:
         uses: actions/setup-go@v4
         with:
           go-version: 1.21.3
-      - name: Install qemu
-        run: sudo apt-get -y install qemu-system-x86
       - name: Test
         run: sudo make -C ./ebpf go/test
+#      - name: Install qemu
+#        run: sudo apt-get -y install qemu-system-x86
+#      - name: Test
 #        run: EBPF_RUN_IN_VM=1 make -C ./ebpf go/test_ebpf
   lint:
     runs-on: ubuntu-latest
