chore(helm): predefine service type for headless services

--- a/operations/pyroscope/helm/pyroscope/templates/services.yaml
+++ b/operations/pyroscope/helm/pyroscope/templates/services.yaml
@@ -35,7 +35,7 @@ metadata:
     {{- include "pyroscope.labels" . | nindent 4 }}
     app.kubernetes.io/component: {{ $component | quote }}
 spec:
-  type: {{ $values.service.type }}
+  type: ClusterIP
   clusterIP: None
   ports:
     - port: {{ $values.service.port }}
