--- a/.github/workflows/test_ebpf.yml
+++ b/.github/workflows/test_ebpf.yml
@@ -16,7 +16,7 @@ concurrency:
   cancel-in-progress: true
 
 jobs:
-  test_ebpf:
+  test_ebpf_amd64:
     runs-on: ubuntu-latest
     steps:
       - name: Checkout code
@@ -25,9 +25,7 @@ jobs:
         uses: actions/setup-go@v4
         with:
           go-version: 1.21.3
+      - name: Install qemu
+        run: sudo apt-get -y install qemu-system-x86
       - name: Test
-        run: sudo make -C ./ebpf go/test
-#      - name: Install qemu
-#        run: sudo apt-get -y install qemu-system-x86
-#      - name: Test
-#        run: EBPF_RUN_IN_VM=1 make -C ./ebpf go/test_ebpf
+        run: EBPF_RUN_IN_VM=1 make -C ./ebpf go/test
