--- a/.github/workflows/test_ebpf.yml
+++ b/.github/workflows/test_ebpf.yml
@@ -28,4 +28,4 @@ jobs:
       - name: Install qemu
         run: sudo apt-get -y install qemu-system-x86
       - name: Test
-        run: EBPF_RUN_IN_VM=1 make -C ./ebpf go/test
+        run: EBPF_RUN_IN_VM=1 make -C ./ebpf go/test/amd64
