--- a/operations/pyroscope/helm/pyroscope/values-micro-services.yaml
+++ b/operations/pyroscope/helm/pyroscope/values-micro-services.yaml
@@ -3,6 +3,8 @@
 # Declare variables to be passed into your templates.
 
 pyroscope:
+  extraArgs:
+    store-gateway.sharding-ring.replication-factor: "3"
   components:
     querier:
       kind: Deployment
