--- a/ebpf/Makefile
+++ b/ebpf/Makefile
@@ -4,12 +4,23 @@ RIDESHARE="testdata/rideshare-flask-no-pip"
 TMP_EBPF := $(shell pwd)/.tmp/ebpf
 
 ifeq ($(shell uname -s),Linux)
-EBPF_GO_TEST_FLAGS = -v -race -cover
-EBPF_CGO_ENABLED = 1
+ifeq ($(shell uname -m),x86_64)
+EBPF_GO_TEST_FLAGS_AMD64 = -v -race -cover
+EBPF_CGO_ENABLED_AMD64 = 1
+EBPF_GO_TEST_FLAGS_ARM64 = -v
+EBPF_CGO_ENABLED_ARM64 = 0
 else
-EBPF_GO_TEST_FLAGS = -v
-EBPF_CGO_ENABLED = 0
-endif
+EBPF_GO_TEST_FLAGS_AMD64 = -v
+EBPF_CGO_ENABLED_AMD64 = 0
+EBPF_GO_TEST_FLAGS_ARM64 = -v -race -cover
+EBPF_CGO_ENABLED_ARM64 = 1
+endif # $(shell uname -m),x86_64
+else
+EBPF_GO_TEST_FLAGS_AMD64 = -v
+EBPF_CGO_ENABLED_AMD64 = 0
+EBPF_GO_TEST_FLAGS_ARM64 = -v
+EBPF_CGO_ENABLED_ARM64 = 0
+endif # $(shell uname -s),Linux
 
 EBPF_RUN_IN_VM ?= 0
 
@@ -48,13 +59,13 @@ bpf/gen:
 
 .PHONY: ebpf.amd64.test
 ebpf.amd64.test:
-	CGO_ENABLED=$(EBPF_CGO_ENABLED) GOOS=linux GOARCH=amd64 \
-		$(GO) test -c $(EBPF_GO_TEST_FLAGS) -o ebpf.amd64.test ./
+	CGO_ENABLED=$(EBPF_CGO_ENABLED_AMD64) GOOS=linux GOARCH=amd64 \
+		$(GO) test -c $(EBPF_GO_TEST_FLAGS_AMD64) -o ebpf.amd64.test ./
 
 .PHONY: ebpf.arm64.test
 ebpf.arm64.test:
-	CGO_ENABLED=$(EBPF_CGO_ENABLED) GOOS=linux GOARCH=arm64 \
-		$(GO) test -c $(EBPF_GO_TEST_FLAGS) -o ebpf.arm64.test ./
+	CGO_ENABLED=$(EBPF_CGO_ENABLED_ARM64) GOOS=linux GOARCH=arm64 \
+		$(GO) test -c $(EBPF_GO_TEST_FLAGS_ARM64) -o ebpf.arm64.test ./
 
 ifeq ($(EBPF_RUN_IN_VM),1)
 
@@ -69,30 +80,36 @@ $(TMP_EBPF)/vm_image_arm64: Makefile
 	mkdir -p $(TMP_EBPF)
 	docker run -v $(TMP_EBPF):/mnt/images \
 		pyroscope/ebpf-test-vm-image:debian-5.10-aarch64 \
-		cp debian-aarch64.qcow2.zst vmlinuz-5.10.0-26-arm64 initrd.img-5.10.0-26-arm64 /mnt/images
-	zstd -f -d $(TMP_EBPF)/debian-aarch64.qcow2.zst
-	mv $(TMP_EBPF)/debian-aarch64.qcow2.zst $(TMP_EBPF)/vm_image_arm64
+		cp debian-5.10-aarch64.qcow2.zst vmlinuz-5.10.0-26-arm64 initrd.img-5.10.0-26-arm64 /mnt/images
+	zstd -f -d $(TMP_EBPF)/debian-5.10-aarch64.qcow2.zst
+	mv $(TMP_EBPF)/debian-5.10-aarch64.qcow2.zst $(TMP_EBPF)/vm_image_arm64
 
 
 .PHONY: go/test/amd64
 go/test/amd64: $(TMP_EBPF)/vm_image_amd64 ebpf.amd64.test
-	bash ../tools/vmrun_amd64.sh $(TMP_EBPF)/vm_image_amd64 ebpf.amd64.test
+	bash ../tools/ebpf_vmrun_amd64.sh $(TMP_EBPF)/vm_image_amd64 ebpf.amd64.test
 
 .PHONY: go/test/arm64
 go/test/arm64: $(TMP_EBPF)/vm_image_arm64 ebpf.arm64.test
-	bash ../tools/vmrun_arm64.sh $(TMP_EBPF)/vm_image_amd64 ebpf.arm64.test
+	bash ../tools/ebpf_vmrun_arm64.sh \
+		$(TMP_EBPF)/vmlinuz-5.10.0-26-arm64 \
+		$(TMP_EBPF)/initrd.img-5.10.0-26-arm64  \
+		$(TMP_EBPF)/debian-5.10-aarch64.qcow2 \
+		ebpf.arm64.test
 else
 
 .PHONY: go/test/amd64
 go/test/amd64: ebpf.amd64.test
 	whoami | grep root
-	./ebpf.test.amd64
+	uname -m | grep x86_64
+	./ebpf.amd64.test
 
 
 .PHONY: go/test/arm64
 go/test/arm64: ebpf.arm64.test
 	whoami | grep root
-	./ebpf.test.arm64
+	uname -m | grep aarch64
+	./ebpf.arm64.test
 
 endif
 
