--- a/.github/workflows/test_ebpf.yml
+++ b/.github/workflows/test_ebpf.yml
@@ -16,7 +16,7 @@ concurrency:
   cancel-in-progress: true
 
 jobs:
-  test_ebpf_amd64:
+  test_ebpf_amd64_qemu:
     runs-on: ubuntu-latest
     steps:
       - name: Checkout code
@@ -29,3 +29,16 @@ jobs:
         run: sudo apt-get -y install qemu-system-x86
       - name: Test
         run: EBPF_RUN_IN_VM=1 make -C ./ebpf go/test/amd64
+  test_ebpf_arm64_qemu:
+    runs-on: ubuntu-latest
+    steps:
+      - name: Checkout code
+        uses: actions/checkout@v3
+      - name: Install Go
+        uses: actions/setup-go@v4
+        with:
+          go-version: 1.21.3
+      - name: Install qemu
+        run: sudo apt-get -y install qemu-system-aarch64
+      - name: Test
+        run: EBPF_RUN_IN_VM=1 make -C ./ebpf go/test/arm64
