--- a/.github/workflows/test_ebpf.yml
+++ b/.github/workflows/test_ebpf.yml
@@ -38,6 +38,8 @@ jobs:
         uses: actions/setup-go@v4
         with:
           go-version: 1.21.3
+      - name: Set up QEMU
+        uses: docker/setup-qemu-action@v2
       - name: Install qemu
         run: sudo apt-get -y install qemu-system-aarch64
       - name: Test
