--- a/.github/workflows/test_ebpf.yml
+++ b/.github/workflows/test_ebpf.yml
@@ -16,6 +16,17 @@ concurrency:
   cancel-in-progress: true
 
 jobs:
+  test_ebpf_amd64:
+    runs-on: ubuntu-latest
+    steps:
+      - name: Checkout code
+        uses: actions/checkout@v3
+      - name: Install Go
+        uses: actions/setup-go@v4
+        with:
+          go-version: 1.21.3
+      - name: Test
+        run: sudo make -C ./ebpf go/test/amd64
   test_ebpf_amd64_qemu:
     runs-on: ubuntu-latest
     steps:
