--- a/.github/workflows/test_ebpf.yml
+++ b/.github/workflows/test_ebpf.yml
@@ -17,7 +17,7 @@ concurrency:
 
 jobs:
   test_ebpf_amd64:
-    runs-on: ubuntu-latest
+    runs-on: ubuntu-latest-16-cores
     steps:
       - name: Checkout code
         uses: actions/checkout@v3
@@ -28,7 +28,7 @@ jobs:
       - name: Test
         run: sudo make -C ./ebpf go/test/amd64
   test_ebpf_amd64_qemu:
-    runs-on: ubuntu-latest
+    runs-on: ubuntu-latest-16-cores
     steps:
       - name: Checkout code
         uses: actions/checkout@v3
@@ -41,24 +41,6 @@ jobs:
       - name: Test
         run: EBPF_RUN_IN_VM=1 make -C ./ebpf go/test/amd64
   test_ebpf_arm64_qemu:
-    runs-on: ubuntu-latest
-    steps:
-      - name: Checkout code
-        uses: actions/checkout@v3
-      - name: Install Go
-        uses: actions/setup-go@v4
-        with:
-          go-version: 1.21.3
-      - name: Set up QEMU
-        uses: docker/setup-qemu-action@v2
-      - name: Install qemu
-        run: sudo apt-get -y install qemu-system-aarch64
-      - name: Test
-        run: EBPF_RUN_IN_VM=1 make -C ./ebpf go/test/arm64
-
-# just check if custom runners are faster
-#  ubuntu-latest-16-cores
-  test_ebpf_arm64_qemu_grafana_runners:
     runs-on: ubuntu-latest-16-cores
     steps:
       - name: Checkout code
