--- a/.github/workflows/test_ebpf.yml
+++ b/.github/workflows/test_ebpf.yml
@@ -37,7 +37,7 @@ jobs:
         with:
           go-version: 1.21.3
       - name: Install qemu
-        run: sudo apt-get -y install qemu-system-x86
+        run: sudo apt-get update && sudo apt-get -y install qemu-system-x86
       - name: Test
         run: EBPF_RUN_IN_VM=1 make -C ./ebpf go/test/amd64
   test_ebpf_arm64_qemu:
@@ -52,6 +52,6 @@ jobs:
       - name: Set up QEMU
         uses: docker/setup-qemu-action@v2
       - name: Install qemu
-        run: sudo apt-get -y install qemu-system-aarch64
+        run: sudo apt-get update && sudo apt-get -y install qemu-system-aarch64
       - name: Test
         run: EBPF_RUN_IN_VM=1 make -C ./ebpf go/test/arm64
