--- a/examples/tracing/tempo/docker-compose.yml
+++ b/examples/tracing/tempo/docker-compose.yml
@@ -38,13 +38,13 @@ services:
       dockerfile: Dockerfile.load-generator
 
   grafana:
-    image: grafana/grafana-dev:10.3.0-144189
+    image: grafana/grafana-dev:10.3.0-149048
     environment:
       - GF_AUTH_ANONYMOUS_ENABLED=true
       - GF_AUTH_ANONYMOUS_ORG_ROLE=Admin
       - GF_AUTH_DISABLE_LOGIN_FORM=true
       - GF_INSTALL_PLUGINS=pyroscope-panel
-      - GF_FEATURE_TOGGLES_ENABLE=traceToProfiles
+      - GF_FEATURE_TOGGLES_ENABLE=traceToProfiles tracesEmbeddedFlameGraph
     volumes:
       - ./grafana/provisioning/datasources:/etc/grafana/provisioning/datasources
     ports:
@@ -64,15 +64,13 @@ services:
       - "9411:9411"   # zipkin
 
   pyroscope:
-    ports:
-      - '4040:4040'
+    image: grafana/pyroscope:1.2.0
     environment:
       JAEGER_AGENT_HOST: tempo
       JAEGER_SAMPLER_TYPE: const
       JAEGER_SAMPLER_PARAM: 1
+    command: [ "-config.file=/etc/pyroscope.yml" ]
+    ports:
+      - '4040:4040'
     volumes:
       - ./pyroscope/pyroscope.yml:/etc/pyroscope.yml
-    command: [ "-config.file=/etc/pyroscope.yml" ]
-    build:
-      context: '../../../'
-      dockerfile: cmd/pyroscope/Dockerfile
