chore: update readme

--- a/examples/tracing/tempo/grafana/provisioning/datasources/datasources.yml
+++ b/examples/tracing/tempo/grafana/provisioning/datasources/datasources.yml
@@ -21,6 +21,9 @@ datasources:
         customQuery: false
         datasourceUid: "pyroscope"
         profileTypeId: "process_cpu:cpu:nanoseconds:cpu:nanoseconds"
+        tags:
+          - key: "host.name"
+            value: "hostname"
 
   - name: Pyroscope
     type: grafana-pyroscope-datasource
